Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4578

information_schema.processlist reports incorrect value for Time (2147483647)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.0.2, 5.5.31, 5.1.67, 5.2.14, 5.3.12
    • 10.0.4, 5.5.32
    • None
    • None
    • Debian Squeeze (6.0.6) x86_64, Linux 3.2.40. Compiled locally. This is 5.5.28-MariaDB-log.

    Description

      In the information_schema.processlist table, the Time column frequently reports an incorrect value of 2147483647. "show processlist" is not similarly affected. From my testing, I'm reasonably sure these queries are all less than 1 second old. I do see plenty of processes reported with an accurate Time value (>=1).

      Examples (with some obfuscation):

      *************************** 1. row ***************************
             ID: 81365
           USER: xxx
           HOST: xxx
             DB: xxx
        COMMAND: Query
           TIME: 2147483647
          STATE: Sending data
           INFO: select xxx left outer join xxx on xxx where xxx
        TIME_MS: 18446744073709550.000
          STAGE: 0
      MAX_STAGE: 0
       PROGRESS: 0.000
       
      *************************** 1. row ***************************
             ID: 82602
           USER: xxx
           HOST: xxx
             DB: xxx
        COMMAND: Query
           TIME: 2147483647
          STATE: optimizing
           INFO: select xxx from xxx where xxx
        TIME_MS: 18446744073709550.000
          STAGE: 0
      MAX_STAGE: 0
       PROGRESS: 0.000

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              jnicol Jonathan Nicol
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 40m
                  40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.