MDEV-4578 information_schema.processlist reports incorrect value for Time (2147483647)

SHOW PROCESSLIST might see a thread that started executing a query *after*
processlist has started. Don't show a negative or huge wrapped-around query execution time.