sql/sql_show.cc
@@ -2297,6 +2297,8 @@ int fill_schema_processlist(THD* thd, TABLE_LIST* tables, COND* cond)
   my_hrtime_t unow= my_hrtime();
   DBUG_ENTER("fill_schema_processlist");
 
+  DEBUG_SYNC(thd,"fill_schema_processlist_after_unow");
+
   user= thd->security_ctx->master_access & PROCESS_ACL ?
         NullS : thd->security_ctx->priv_user;
 
@@ -2355,9 +2357,8 @@ int fill_schema_processlist(THD* thd, TABLE_LIST* tables, COND* cond)
         table->field[4]->store(command_name[tmp->command].str,
                                command_name[tmp->command].length, cs);
       /* MYSQL_TIME */
-      const ulonglong utime= (tmp->start_time ?
-                              (unow.val - tmp->start_time * HRTIME_RESOLUTION -
-                               tmp->start_time_sec_part) : 0);
+      ulonglong start_utime= tmp->start_time * HRTIME_RESOLUTION + tmp->start_time_sec_part;
+      ulonglong utime= start_utime < unow.val ? unow.val - start_utime : 0;
       table->field[5]->store(utime / HRTIME_RESOLUTION, TRUE);
       /* STATE */
       if ((val= thread_state_info(tmp)))
